--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "env": "^0.0.2",
     "firebase": "^9.12.1",
     "magic-sdk": "^10.0.0",
+    "netlify-cli": "^12.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
