--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "redux-saga": "^1.2.1",
     "reselect": "^4.1.6",
     "sass": "^1.55.0",
+    "stripe": "^11.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
