--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@stripe/react-stripe-js": "^1.16.3",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +12,7 @@
     "env": "^0.0.2",
     "magic-sdk": "^10.0.0",
     "netlify-cli": "^12.2.8",
+    "postscribe": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.0.3",
