--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.0.3",
     "react-icons": "^4.4.0",
+    "react-pdf": "^6.2.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "reactjs-pdf-reader": "^1.0.12",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
